Make sure button_to buttons are separated by whitespace

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -2022,7 +2022,8 @@ a.button {
   input[type="submit"],
   input[type="button"],
   input[type="reset"],
-  .button {
+  .button,
+  .button_to {
     box-sizing: border-box;
     float: left;
     border-radius: 0;
@@ -2035,30 +2036,36 @@ a.button {
     overflow: hidden;
   }
   input:first-child,
-  .button:first-child {
+  .button:first-child,
+  .button_to:first-child {
     border-radius:2px 0 0 2px;
   }
   input:last-child,
-  .button:last-child {
+  .button:last-child,
+  .button_to:last-child {
     border-radius:0 2px 2px 0;
     border-right-width: 0;
   }
   input:only-child,
   .button:only-child,
+  .button_to:only-child,
   *[value="Hide"] + input:last-child,
-  *[value="Hide"] + .button:last-child {
+  *[value="Hide"] + .button:last-child,
+  *[value="Hide"] + .button_to:last-child {
     border-radius:2px;
     border-right-width: 0;
   }
     /* if a 3-button set has a hidden middle button */
   *[value="Hide"] + input:nth-child(3),
-  *[value="Hide"] + .button:nth-child(3) {
+  *[value="Hide"] + .button:nth-child(3),
+  *[value="Hide"] + .button_to:nth-child(3) {
     border-radius:0 2px 2px 0;
     border-right-width: 0;
   }
   /* if a 3-button set starts with a hidden button */
   *[value="Hide"] + input:nth-child(2):not(:last-child),
-  *[value="Hide"] + .button:nth-child(2):not(:last-child) {
+  *[value="Hide"] + .button:nth-child(2):not(:last-child),
+  *[value="Hide"] + .button_to:nth-child(2):not(:last-child) {
     border-radius:2px 0 0 2px;
     border-right-width: 1px;
   }
